kubernetes-deployments/Ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hedgina-api
  namespace: hedgina
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/cors-allow-methods: "PUT, GET, POST, DELETE, PATCH"
    nginx.ingress.kubernetes.io/cors-allow-headers: "token, Access-Control-Allow-Origin, Content-Type"
spec:
  rules:
  - http:
      paths:
      - path: /ExchangeService/api/v1/exchanges
        pathType: Prefix
        backend:
          service:
            name: rest-exchange-service
            port:
              number: 443
      - path: /UserService/api/v1/
        pathType: Prefix
        backend:
          service:
            name: user-authentication-service
            port:
              number: 443
      - path: /UserService/api/v1/subscriptions
        pathType: Prefix
        backend:
          service:
            name: user-subscription-service
            port:
              number: 443
      - path: /StrategyService/api/v1/strategies
        pathType: Prefix
        backend:
          service:
            name: rest-strategy-service
            port:
              number: 443
      - path: /StrategyService/api/v1/deals
        pathType: Prefix
        backend:
          service:
            name: rest-strategy-service
            port:
              number: 443
      - path: /StrategyService/api/v1/accountinfo
        pathType: Prefix
        backend:
          service:
            name: rest-strategy-service
            port:
              number: 443
      - path: /StrategyService/api/v1/accountprofit
        pathType: Prefix
        backend:
          service:
            name: rest-strategy-service
            port:
              number: 443
      - path: /StrategyService/api/v1/strategyprofit
        pathType: Prefix
        backend:
          service:
            name: rest-strategy-service
            port:
              number: 443
      - path: /PriceService/api/v1
        pathType: Prefix
        backend:
          service:
            name: rest-price-service
            port:
              number: 443
      - path: /PriceService/api/v1/positions
        pathType: Prefix
        backend:
          service:
            name: rest-price-service
            port:
              number: 443
      - path: /OrderService/api/v1/orders
        pathType: Prefix
        backend:
          service:
            name: rest-order-service
            port:
              number: 443
      - path: /EventHistoryService/api/v1
        pathType: Prefix
        backend:
          service:
            name: rest-eventhistory-service
            port:
              number: 443
      - path: /DashboardService/api/v1/portfolio
        pathType: Prefix
        backend:
          service:
            name: rest-dashboard-service
            port:
              number: 443
